// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can set type 1`] = `
<div
  className="notification is-warning"
>
  Alert !
</div>
`;

exports[`pass props 1`] = `
<div
  className="notification is-info"
  title="my title"
>
  Hellooow
</div>
`;

exports[`render message 1`] = `
<div
  className="notification is-info"
>
  Hello
</div>
`;

exports[`without body 1`] = `
<div
  className="notification is-info"
/>
`;
